kubernetes/apps/database/percona-postgres-operator/pgadmin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: database
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: database
spec:
  selector:
    postgres-operator.crunchydata.com/pgadmin: pgadmin
  type: ClusterIP
  ports:
    - name: pgadmin
      protocol: TCP
      port: 5050
      targetPort: 5050
